nxn/test/pass/001-04.nxn
// Return a value from block expression inside a block statement.

fn main() i32 {
    {                       // Block statement (to create nested scopes)
        let x = ${          // Block expression (to return values from nested scopes)
            set 7;
        };
        return x;
    }
    return 0;
}
